--- a/animalchange/map.css
+++ b/animalchange/map.css
@@ -24,17 +24,16 @@
 	float: left;
 }
 
-#bardiv {
-	width: 700px;
-	height: 600px;
-	float: right;
-}
+
 
 .slidecontainer {
 
-	width: 250px;
+	/*width: 250px;*/
+    width: 50%;
 	height: 200px;
-    float: right;
+    padding: 100px;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
@@ -71,3 +70,18 @@
     background: #4CAF50;
     cursor: pointer;
 }*/
+
+.jumbotron {
+    text-align: center;
+    color: green;
+}
+
+.page-header {
+    color: green;
+    background-color: green;
+}
+
+.nl_button {
+    cursor: pointer;
+
+}
