--- a/animalchange/code/css/bar.css
+++ b/animalchange/code/css/bar.css
@@ -15,17 +15,17 @@
 
 #kip {
 	/*geel*/
-	fill: #5C6BC0;
+	fill: #A1887F;
 }
 
 #varken {
 	/*blauw*/
-	fill: #FFCA28;
+	fill: #F48FB1;
 }
 
 #overig {
 	/*bruin*/
-	fill: #8D6E63;
+	fill: #FF8A65;
 }
 
 #kalkoen {
