--- a/animalchange/code/css/map.css
+++ b/animalchange/code/css/map.css
@@ -1,15 +1,17 @@
+/*Name: Bob Borsboom
+Student number: 10802975
+Programming project
+
+styles the map and logs the current place
+*/
+
 .d3-tip {
 	line-height: 1;
 	font-weight: bold;
-
-	/*set pop up box size*/
 	padding: 12px;
-
-	/*set pop up box color*/
 	background: rgba(0, 0, 0, 0.8);
 	color: #fff;
 	border-radius: 2px;
-
 }
 
 #provincie:hover {
@@ -17,106 +19,20 @@
 	cursor: pointer;
 }
 
-/*1456 is de de hele breeddte van de webpagina. de helft daarvan is 728*/
 #mapdiv {
-	width: 900px;
-	height: 800px;
+	width: 950px;
+	height: 950px;
 	float: left;
 }
 
-.slidecontainer {
-
-	/*width: 250px;*/
-    width: 70%;
-	/*height: 200px;*/
-    padding-left: 300px;
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
+.log_province {
+    position: absolute;
+    left: 100px;
+    top: 200px;
 
 }
 
-/*dikte van de balk*/
-.slider {
-    -webkit-appearance: none;
-    width: 250px;
-    height: 25px;
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-    cursor: pointer;
+.log_province{
+    position: absolute;
+    right: 10px;
 }
-
-.slider:hover {
-    opacity: 2;
-}
-
-/*dikte van het bolletje in de slider*/
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    background: #4CAF50;
-    cursor: pointer;
-}
-/*
-.slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    background: #4CAF50;
-    cursor: pointer;
-}*/
-
-.jumbotron {
-    text-align: center;
-    color: green;
-}
-
-.page-header {
-    color: green;
-    background-color: green;
-}
-
-.nl_button {
-
-    cursor: pointer;
-    background: #e0e0e0;
-    height: 50px;
-    width: 200px;
-    font-weight: bold;
-    font-size: 250%;
-}
-
-.nl_button:hover {
-    background: #c6c6c6;
-
-}
-
-#buttondiv {
-    width: 500px;
-    /*height: 10000px;*/
-    float: right;
-    float:;
-}
-
-.box {
-
-    text-align: center;
-    cursor: pointer;
-    background: green;
-    height: 50px;
-    width: 100px;
-    font-weight: bold;
-    font-size: 250%;
-    padding-left: 200px;
-}
-
-/*.nl_button {
-    float: right;
-    padding-left: 200px;
-    width: 20%;
-    
-}
-*/
